Fix: responsive header layout and search input on mobile

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -31,6 +31,7 @@
       }
 
       .header__actions-item--menu {
+        margin-left: auto;
         display: flex;
         border-left: 1px solid #e2e6e9;
       }
@@ -48,7 +49,13 @@
 
     &--search {
       position: relative;
-      width: 350px;
+      width: auto;
+      flex-grow: 1;
+      max-width: 100%;
+
+      @include mobile {
+    max-width: 60%;
+  }
     }
 
     &:hover {
@@ -140,8 +147,13 @@
 
 .search-item {
   padding-left: 40px;
-  width: 100%;
+  max-width: 350px;
   height: 64px;
+
+  @include mobile {
+    max-width: 150px;
+    padding-left: 50px;
+  }
 
   &:focus {
     outline: none;
